# advent-of-code-2022

./: .gitignore  Cargo.toml  README.md
misc/: day16-visualization.ipynb
src/: color.rs  day01.rs  day03.rs  day05.rs  day06.rs  days.rs  main.rs  solution.rs  template.rs  text_to_image.rs  types.rs  utils.rs  video.rs  visualizer.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs
src/video/: text_to_image.rs  writer.rs
