[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
regex = "1"
strum = "0.24"
strum_macros = "0.24"
num = "0.4.0"
font-kit = "0.11.0"
pathfinder_geometry = "0.5"
image = "0.24.5"
rand = "0.8.5"
lazy_static = "1.4.0"
ansi_term = "0.12.1"
strip-ansi-escapes = "0.1.1"
colors-transform = "0.2.11"
termion = "2.0.1"
